# gLayout

./: setup.py
ALIGN-GF180 Wrapper/: telescopic_ota_sky130_example.sp  verification_helpers.py
ALIGN-GF180-Wrapper/: TODO.md  VERIFICATION.md  align_gf180_wrapper.py  run_align_gf180_verification.py  telescopic_ota_gf180.sp  telescopic_ota_sky130_example_gf180.sp
ALIGN-GF180-Wrapper/outputs/verification/: summary.json  summary.md
Gelochip_lib/: .gitignore  LICENSE  combiner_8to1_pex.spice  pyproject.toml  requirements-dev.txt  requirements.txt  rx_frontend_pex.spice  willtondocs.md
Gelochip_lib/app/: web_app.py
Gelochip_lib/local_magic_fix/: gf180mcu.magicrc
Gelochip_lib/scripts/: run_pex.sh  setup_pdk.sh
Gelochip_lib/src/gelochip/: __init__.py  cli.py
Gelochip_lib/src/gelochip/agent/: graph.py  output_manager.py  state.py
Gelochip_lib/src/gelochip/agent/nodes/: __init__.py  layout_generator.py  researcher.py  spec_parser.py  verifier.py
Gelochip_lib/src/gelochip/agent/prompts/: __init__.py
Gelochip_lib/src/gelochip/agent/tools/: __init__.py  search_tools.py
Gelochip_lib/src/gelochip/api/: __init__.py  main.py
Gelochip_lib/src/gelochip/api/routes/: __init__.py
Gelochip_lib/src/gelochip/core/: __init__.py
Gelochip_lib/src/gelochip/core/blocks/: amplifier.py  bias.py  current_mirror.py  diff_pair.py
Gelochip_lib/src/gelochip/core/cells/: __init__.py  mixer.py  opamp.py
Gelochip_lib/src/gelochip/core/pdk/pdk/: mappedpdk.py
Gelochip_lib/src/gelochip/core/pdk/pdk/gf180_mapped/: __init__.py
Gelochip_lib/src/gelochip/core/primitives/: __init__.py  fet.py  guardring.py  passive.py  via.py
Gelochip_lib/src/gelochip/glayout/cells/: __init__.py
Gelochip_lib/src/gelochip/glayout/cells/composite/: __init__.py  rf_blocks.py
Gelochip_lib/src/gelochip/glayout/cells/composite/fvf_based_ota/: p_block.py  sky130_ota_tapeout.py
Gelochip_lib/src/gelochip/glayout/cells/composite/opamp/: opamp.py
Gelochip_lib/src/gelochip/glayout/cells/composite/stacked_current_mirror/: stacked_current_mirror.py
Gelochip_lib/src/gelochip/glayout/cells/elementary/diff_pair/: __init__.py
Gelochip_lib/src/gelochip/glayout/cells/elementary/transmission_gate/: __init__.py  transmission_gate.py
Gelochip_lib/src/gelochip/glayout/pdk/ihp130_mapped/: __init__.py
Gelochip_lib/src/gelochip/glayout/pdk/sky130_mapped/: __init__.py
Gelochip_lib/src/gelochip/glayout/primitives/: fet.py  resistor.py
Gelochip_lib/src/gelochip/glayout/verification/: __init__.py  physical_features.py
Gelochip_lib/src/gelochip/verification/: drc_lvs.py  simulate.py  testbench.py
Gelochip_lib/tests/test_core/: test_blocks.py
NAND/Nand_Gate/: 13222021_Tugas 5_Basic_Gates.pptx
NAND/Nand_Gate/klayout/: nand_gate.gds  nand_gate.spice
NAND/Nand_Gate/xschem/: nand_gate.sch  nand_gate.sym  nand_gate_tb.sch
OR/: antenna.lyrdb  inverter.mag  inverter.sch  inverter.spice  inverter.sym  inverter_lay.spice  inverter_layout.spice  inverter_sym.sch  inverter_tran.sch  inverter_vtc.sch  nfet_03v3_EXLZ5T.mag  nfet_03v3_EXLZMT.mag  nfet_03v3_MZLZLT.mag  or.mag  or.sch  or.spice  or_lay.spice  or_test.sch  orgate_truth_table.raw
OR/layout/: antenna.lyrdb  density.lyrdb  inverter.mag
legacy/Gelochip_lib/: README.md  buffer_block_pex.spice  els  environment.yml  lna_block_pex.spice  mtp_memory_wrapper_pex.spice  rf_amp_block_pex.spice
legacy/Gelochip_lib/app/: mcp_server.py
legacy/Gelochip_lib/notebooks/: IGBT_1kW_motor_driver.ipynb
tutorial/: glayout_tutorial_5T_OTA_part1.ipynb  glayout_tutorial_5T_OTA_part2.ipynb
(+45 files in other folders)
