[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gelochip"
version = "0.1.0"
description = "AI-Assisted Analog/RF IC Layout Automation powered by GLayout and LangGraph"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "adeirman46", email = "adeirman2705@gmail.com" }]
keywords = ["analog", "rf", "ic-design", "eda", "glayout", "ai-agent", "langraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # GLayout / EDA core
    "gdsfactory>=7.0.0,<8.0.0",
    "gdstk>=0.9.0",
    "klayout>=0.28.0",
    "PySpice>=1.5",
    "schemdraw>=0.17",
    "svgutils>=0.3.4",
    "numpy>=1.24.0,<2.0",  # gdsfactory<8.0 uses np.float_ which was removed in numpy 2.0
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    # AI / Agent
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=3.0.0",
    "arxiv>=2.1.0",
    "crawl4ai>=0.4.0",
    # Web interface (custom FastAPI + SSE — Chainlit removed)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    # MCP server
    "mcp>=1.0.0",
    # PDF figure extraction for researcher vision
    "pymupdf>=1.24.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "aiofiles>=23.2.0",
    "mako>=1.3.0",
    "nltk>=3.8.0",
    "prettyprint>=0.1.5",
    "ipywidgets>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
ml = [
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "datasets>=2.20.0",
    "accelerate>=0.30.0",
    "scikit-learn>=1.5.0",
    "google-generativeai>=0.7.0",
    "tqdm>=4.66.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "gymnasium>=0.29.0,<1.0",   # 1.x has C extensions compiled against numpy 2.x
    "stable-baselines3>=2.3.0,<2.4.0",  # 2.4+ requires gymnasium>=1.0
    "nbconvert>=7.0.0",
]

[project.scripts]
gelochip = "gelochip.cli:app"

[project.urls]
Homepage = "https://github.com/adeirman46/Gelochip"
Repository = "https://github.com/adeirman46/Gelochip"

[tool.hatch.build.targets.wheel]
packages = ["src/gelochip"]

[tool.hatch.build.targets.sdist]
include = ["src/gelochip", "README.md", "LICENSE"]

# ── uv workspace (optional, for multi-package monorepos) ──
[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
